--- a/static/app/elr/index.html
+++ b/static/app/elr/index.html
@@ -274,6 +274,7 @@ const combo=document.getElementById("combo");
 let state="none";        // none | preview | final
 let selectionType=null; // miles | dest
 let milesDraft="";      // stores miles so input stays empty
+let skipDeleteBeforeinput=false; // avoids double-handling backspace
 
 function calcMiles(m){
   if(m<1)return 5;
@@ -340,6 +341,12 @@ function renderMiles(){
   sync();
 }
 
+function handleMilesBackspace(){
+  if(!milesDraft)return;
+  milesDraft=milesDraft.slice(0,-1);
+  milesDraft?renderMiles():resetAll();
+}
+
 entry.addEventListener("focus",()=>state==="none"&&openPicker(true));
 entry.addEventListener("click",()=>state==="none"&&openPicker(true));
 
@@ -357,9 +364,9 @@ entry.addEventListener("beforeinput",(e)=>{
   }
 
   if(e.inputType==="deleteContentBackward"){
+    if(skipDeleteBeforeinput){ skipDeleteBeforeinput=false; return; }
     e.preventDefault();
-    milesDraft=milesDraft.slice(0,-1);
-    milesDraft?renderMiles():resetAll();
+    handleMilesBackspace();
   }
 });
 
@@ -379,7 +386,15 @@ document.querySelectorAll(".destChip").forEach(b=>{
 
 entry.addEventListener("keydown",(e)=>{
   if(e.key==="Enter"&&state==="preview"){ state="final"; sync(); }
-  if(e.key==="Backspace"&&state==="final"){ e.preventDefault(); resetAll(); openPicker(true); }
+  if(e.key==="Backspace"){
+    if(state==="final"){ e.preventDefault(); resetAll(); openPicker(true); return; }
+    if(milesDraft){
+      e.preventDefault();
+      skipDeleteBeforeinput=true;
+      setTimeout(()=>skipDeleteBeforeinput=false,0);
+      handleMilesBackspace();
+    }
+  }
 });
 
 clearBtn.onclick=()=>{ resetAll(); openPicker(true); entry.focus(); };
